# SystemMonitor

./: .gitignore  CMakeLists.txt  README.md  colors.cpp  colors.hpp  main.cpp  monitor  process.cpp  process.hpp  read.txt
